ADD:times do brasileirão

--- a/index.html
+++ b/index.html
@@ -175,35 +175,35 @@
                 <tbody>
                     <tr>
                         <td>1º</td>
-                        <td>Estrela Azul</td>
+                        <td>Palmeiras</td>
                         <td>5</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>12</td>
+                        <td>22</td>
                     </tr>
                     <tr>
                         <td>2º</td>
-                        <td>Leões da Serra</td>
+                        <td>Flamengo</td>
                         <td>5</td>
-                        <td>3</td>
                         <td>2</td>
-                        <td>9</td>
+                        <td>1</td>
+                        <td>18</td>
                     </tr>
                     <tr>
                         <td>3º</td>
-                        <td>Fênix FC</td>
+                        <td>Cruzeiro</td>
                         <td>5</td>
-                        <td>2</td>
                         <td>3</td>
-                        <td>6</td>
+                        <td>1</td>
+                        <td>17</td>
                     </tr>
                     <tr>
                         <td>4º</td>
-                        <td>Trovões do Sul</td>
+                        <td>Bragantino</td>
                         <td>5</td>
-                        <td>1</td>
-                        <td>4</td>
                         <td>3</td>
+                        <td>1</td>
+                        <td>17</td>
                     </tr>
                 </tbody>
                 <tfoot>
