ADD:adicionando footer

--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
         </div>
     </main>
 
-    <footer> <!--Não sei o que botar--> </footer>
+    <footer>
+        <p style="text-align: center;">&copy; 2025 Tabelas Maravilhosas. Todos os direitos reservados.</p>
+    </footer>
 
 </body>
 
